fixed the nav bar overflow of work tab and prettied up the contact form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -281,11 +281,11 @@ min-height: 240px;
   text-align: center;
   input{
     margin-top: 8px;
-    border: none;
+    border: 0.5 solid #333;
   }
   textarea{
     margin-top: 8px;
-    border: none;
+    border: 0.5 solid #333;
   }
   label{
     padding: 8px;
